# skills-cli

./: .gitignore  .pre-commit-config.yaml  README.md  SKILLS_PUBLISHING.md  pyproject.toml
src/skills_cli/: __init__.py  cli.py
tests/: test_skills.py
tests/fixtures/valid-skill/references/: guide.md
tests/fixtures/valid-skill/scripts/: example.py
