[project]
name = "skills-cli"
version = "0.1.0"
description = "A CLI tool for managing skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
license = "MIT"
authors = [
    { name = "Benjamin", email = "benjamin@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
skills = "skills_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
