[project]
name = "skills-cli"
version = "0.1.1"
description = "A CLI tool for managing skills."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyyaml>=6.0", "httpx>=0.27"]
license = "MIT"
authors = [
    { name = "Ben Anderson", email = "ben@trytaylor.ai" }
]

[project.scripts]
skills = "skills_cli.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
